# local-first-agentic-browser-core

./: IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  PHASE8_MULTIMODAL_COMPLETE.md  PHASE9_LEARNING_ADAPTATION.md  README.md  conda_arch.py  create_enhancements.py  docker-compose.yml  memory.md  pytest.ini  requirements.txt  setup-microservices.sh  spec.md
.github/workflows/: deploy.yml  security.yml  tests.yml
agent-core-golang/: Dockerfile  main.go
customization-control/local-storage/: local_storage.py
customization-control/memory-manager/: memory_manager.py
deploy/: docker-compose.yml
deploy/k8s/staging/: deployment.yaml
docs/: CONDA_IMPLEMENTATION_COMPLETE.md  DESKTOP_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PHASE6_SUMMARY.txt  WORKFLOW_COMPLETE.md  memory.md
inference-kernel-c/: README.md  sat_solver.c
infra/observability/: PHASE6_OBSERVABILITY_COMPLETE.md
infra/observability/grafana-alloy/: config.yml
infra/observability/prometheus/: prometheus.yml
infra/observability/prometheus/rules/: agentic_alerts.yml
k8s/production/: deployment.yaml
observability/: app.py
observability/efk/: elasticsearch.yml  fluentd.conf
observability/grafana-alloy/: dashboard_agentic.json
reasoning-engine-python/: Dockerfile  PHASE3_COMPLETION_SUMMARY.md  implement_phase3.sh  main.py  phase3_content.txt  security-review-pentest.sh  setup-opa.sh
reasoning-engine-python/agent-core-golang/: Dockerfile
reasoning-engine-python/agent-core-golang/workflow/: scheduler.go
reasoning-engine-python/learning/: __init__.py  context_adapter.py  skill_acquisition.py
reasoning-engine-python/models/: __init__.py  user_profile.py
reasoning-engine-python/multimodal/: multimodal_engine.py
reasoning-engine-python/multimodal/audio/: audio_processor.py
reasoning-engine-python/multimodal/code/: code_analyzer.py
reasoning-engine-python/storage/: __init__.py
scripts/: renew-spiffe-certs.sh  run-backend-and-desktop.sh  security-scan.sh  setup-spiffe.sh  setup-vault.sh
security/spire/: agent.conf  server.conf
src/agent/customization-control/: PHASE7_CUSTOMIZATION_COMPLETE.md
src/agent/customization-control/spec-editor/: spec_editor.py
src/backend/agent-core-golang/: main.go
src/backend/inference-kernel-c/: CMakeLists.txt  symbolic_algebra.c
src/backend/reasoning-engine-python/: memory.md  run-phase5-integration.sh  setup-audit-logging.sh  setup-mtls.sh  setup-vault.sh  suggestion_engine.py  workflow_optimizer.py
src/backend/reasoning-engine-python/learning/: adaptive_profiler.py  online_learner.py  preference_engine.py
src/backend/reasoning-engine-python/models/: learning_state.py
src/backend/reasoning-engine-python/storage/: learning_storage.py
src/backend/reasoning-engine-python/workflow_builder/: __init__.py
src/renderer/: App.jsx
test-dir/: .dockerignore  CLI_USER_GUIDE.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_INSTALLATION_GUIDE.md  CYBERCORE_ADVANCED_CAPABILITIES.md  CYBERCORE_COMPLETION_SUMMARY.md  CYBERCORE_ELITE_V3.md  CYBERCORE_ULTIMATE_V5.md  FINAL_PROJECT_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_COMPLETE.md  INSTALLATION_READY.md  MANIFEST.in  OPTION4_CLI_COMPLETE.md  OPTION6_DOCUMENTATION_COMPLETE.md  PROJECT_FINAL_STATUS.md  SECURITY_TOOLS_INTEGRATION.md  VAPT_STQA_GUIDE.md  create_vapt_stqa.py  docker-compose.cybercore.yml  example_stqa.py  example_vapt.py  install.bat  install.sh  package.json  requirements.txt
test-dir/conda-app/conda-desktop/: INSTALLATION_GUIDE.md  STQA_VAPT_FINAL_REPORT.md  STQA_VAPT_REPORT.json  package.json  vite.config.js
test-dir/conda-app/conda-desktop/public/: index.html
test-dir/cybercore/: __init__.py
test-dir/cybercore/security/: audit_logger.py  authorization.py
test-dir/cybercore_v5/cli/: main.py
test-dir/cybercore_v5/integrations/: __init__.py
test-dir/cybercore_v5/stqa/: __init__.py  quality_analyzer.py  tester.py
test-dir/cybercore_v5/vapt/: __init__.py
test-dir/docs/api/: README.md
test-dir/docs/tutorials/: 01-first-scan.md  03-autonomous-ops.md
tests/: CUSTOMIZATION_UPDATE.md  CYBERCORE_SECURITY_ASSISTANT.md  DOCKER_README.md  Dockerfile.cybercore  PHASE1_COMPLETE.md  PHASE9_STQA_VAPT_REPORT.md  VAPT_STQA_COMPLETE.md  conftest.py  create_cli_commands.py  cybercore_demo.py  setup.py  test_cybercore_basic.py  test_phase9_learning.py
tests/conda-app/: PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  package.json  vite.config.js
tests/conda-app/conda-desktop/: PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  SECURITY_FIXES_COMPLETE.md  STQA_VAPT_VERIFICATION.json  package-lock.json
tests/cybercore/redteam/: __init__.py
tests/cybercore/security/: __init__.py  cybercore_assistant.py  ethical_framework.py
tests/cybercore_v5/: __init__.py
tests/cybercore_v5/cli/: __init__.py
tests/cybercore_v5/stqa/: automation.py
tests/cybercore_v5/vapt/: pentester.py  reporter.py  scanner.py
tests/docs/: GETTING_STARTED.md  IMPLEMENTATION.md
tests/docs/tutorials/: 02-quantum-crypto.md
tests/integration/: test_observability_integration.py
tests/security/: test_privacy_security.py
tests/unit/: test_agentic_tracer.py  test_local_storage.py  test_spec_editor.py
(+23 files in other folders)
